<resources>
    <string name="app_name">Notes</string>

    <string name="select_font">Select Font</string>
    <string name="jersey">Jersey</string>
    <string name="roboto">Roboto</string>
    <string name="note_saved">Note Saved</string>
    <string name="enter_note_title">Please enter note title</string>
    <string name="check_grammar">Failed to check grammar:%1$s</string>
    <string name="no_grammar_errors">No grammar errors found.</string>

    <string name="total_word_count">Total word count:%1$d</string>
    <string name="delete_note">Delete Note</string>
    <string name="delete_note_message">Do you want to delete this note?</string>
    <string name="delete">Delete</string>
    <string name="note_deleted">Note Deleted</string>
    <string name="cancel">Cancel</string>
    <string name="permission_not_granted">Storage permission not granted</string>
    <string name="note_recover">Note Recover</string>
    <string name="upload_called">uploadToDrive called</string>
    <string name="file_not_empty">File path or name must not be empty</string>
    <string name="uploaded_successfully">File uploaded successfully with ID:%1$s</string>
    <string name="error_uploading_file">Error uploading file::%1$s</string>

    <string name="search">Search</string>
    <string name="trash">Trash</string>
    <string name="date_note">Date note</string>
    <string name="language">Language</string>
    <string name="save">Save</string>
    <string name="recover">Recover</string>
    <string name="upload">Upload</string>
    <string name="word_count">Word Count</string>
    <string name="lingua_robot">Lingua Robot</string>
    <string name="notes">Notes</string>

    <string name="today">Today</string>
    <string name="switch_date">Switch date</string>

    <string name="add_note">Add Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="trash_note">Trash Note</string>
    <string name="enter_the_title">Enter the title</string>
    <string name="enter_the_description">Enter the description</string>


    <string name="hint_date">Select Date</string>

    <string name="language_setting">Language setting</string>
    <string name="setting_language_auto">Following system</string>
    <string name="setting_language_english">English</string>
    <string name="setting_simplified_chinese">简体中文</string>
    <string-array name="language_list">
        <item>Following system</item>
        <item>English</item>
        <item>简体中文</item>
    </string-array>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

</resources>