<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/searchMenu"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/trash"
        android:title="@string/trash"
        app:showAsAction="never" />

    <item
        android:id="@+id/date_note"
        android:title="@string/date_note"
        app:showAsAction="never" />

    <item
        android:id="@+id/language"
        android:title="@string/language"
        app:showAsAction="never" />
</menu>