<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp"
        tools:context=".UpdateNoteFragment">

        <TextView
            android:id="@+id/editNoteHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/edit_note"
            android:textColor="@color/red"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/editNoteHeading"
            android:layout_marginTop="16dp"
            android:background="@drawable/pink_border"
            android:fontFamily="@font/poppins"
            android:hint="@string/enter_the_title"
            android:maxLines="1"
            android:padding="12dp"
            android:textSize="20sp" />

        <ScrollView
            android:id="@+id/layoutt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/editNoteTitle"
            android:layout_marginTop="12dp"
            android:background="@drawable/pink_border"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editNoteDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="2dp"
                    android:background="@drawable/pink_border"
                    android:backgroundTint="#FFFFFF"
                    android:fontFamily="@font/poppins"
                    android:gravity="top"
                    android:hint="@string/enter_the_description"
                    android:padding="12dp"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/editNoteImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    android:adjustViewBounds="true"
                    android:maxWidth="200dp"
                    android:maxHeight="200dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editNoteDesc" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editNoteFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/pink"
            android:clickable="true"
            android:contentDescription="editFab"
            android:src="@drawable/baseline_done_24"
            android:tintMode="@color/white" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addImgBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="90dp"
            android:backgroundTint="@color/pink"
            android:clickable="true"
            android:contentDescription="editFab"
            android:src="@drawable/baseline_add_to_photos_24"
            android:tintMode="@color/white" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addFontBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="160dp"
            android:backgroundTint="@color/pink"
            android:clickable="true"
            android:contentDescription="editFab"
            android:src="@drawable/baseline_24mp_24"
            android:tintMode="@color/white" />

    </RelativeLayout>
</layout>